PDFBOX-4195: force early class loading to check if people forgot to use --add-modules javax.xml.bind
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1829822 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 92986822c54f759dd990deb27cc8933c1e363d4d